kubernetes/apps/kube-system/cilium/app/netpol-hubble-relay.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-hubble-relay
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-relay
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: hubble-ui
      toPorts:
        - ports:
            - port: "4245"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "4244"
              protocol: TCP
